# bhagvat-gita

./: .gitignore  README.md  pyproject.toml
data/analytics/: events.jsonl
data/csv/: Gita_simplified (1).csv  all_results 2.csv
data/shares/: b64ee39de7.json
data/text_files/: machine_learning.txt  python_intro.txt
notebook/: document.ipynb  gita.ipynb  pdf_loader.ipynb  share_feature.py
