[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.7",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.1",
    "pandas>=2.3.3",
    "peft>=0.18.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "sentence-transformers>=5.4.0",
]
